k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-swagger-service
spec:
  type: NodePort
  ports:
    - port: 7000  # image, 程式啟動時的port
      nodePort: 30750  # 外面接近來的port
  selector:
    app: k8s-jenkins
